# gha-python-package-release-demo

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs-preview.yml  docs-publish.yml  release.yml
gha_release_demo_pkg/: __init__.py  _version.py
src/gha_python_package_release_demo/: __init__.py
